<resources>
    <string name="app_name">EvC3</string>
    <string name="title_activity_formulario">FormularioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="val_acceder">Acceder</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="val_salir">Salir</string>
    <string name="etnombre">INGRESE EL NOMBRE DE SU MASCOTA\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_principal">principal</string>
    <string name="tvdescripcion">SOBRE TU MASCOTA</string>
    <string name="tvfacebok">FACEBOOK:</string>
    <string name="etfacebook">INGRESA TU FACEBOOK</string>
    <string name="menu_reserva">reserva</string>
    <string name="tvtitulo">CONFRIMA TU RESERVA</string>
    <string name="menu_inicio">inicio</string>
    <string name="etfechainicio">INGRESE LA FECHA DE INICIO</string>
    <string name="etfechafin">INGRESE FECHA FINAL</string>
    <string name="btnreserva">RESERVAR AHAORA</string>
</resources>